# Keynest

./: .gitignore  AGENTS.md  AGENT_CHEST.md  AGENT_ONBOARDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
agent-chest-proxy/cmd/agent-chest-proxy/: main.go
agent-chest-proxy/internal/agents/: agents.go  agents_test.go
agent-chest-proxy/internal/netguard/: netguard.go
agent-chest-proxy/internal/proposals/: proposals.go  proposals_test.go
agent-chest-proxy/internal/proxy/: agent_auth_test.go  agents_invites_test.go  proposals_test.go  proxy.go
agent-chest-proxy/internal/rbac/: rbac.go
scripts/: test-proxy.sh  vault-diagnostic.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: biometric.rs  crypto.rs  git.rs  lib.rs  main.rs  models.rs  pgp.rs  proxy.rs  settings.rs  ssh.rs
src/components/: CreateVault.tsx  ErrorBoundary.tsx  ProxyManager.tsx  QuickPicker.tsx  Settings.tsx  UnlockVault.tsx  VaultDashboard.tsx  VaultList.tsx
src/lib/: api.ts  store.ts  types.ts
src/styles/: index.css
src/test/: ErrorBoundary.test.tsx
