[package]
name = "keychest-tauri"
version = "0.2.0"
description = "KeyChest — secure SSH key and API key manager"
authors = ["you"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/interfluve-wav/KeyChest"
homepage = "https://github.com/interfluve-wav/KeyChest"
keywords = ["keychest", "tauri", "ssh", "security", "proxy"]
categories = ["cryptography", "command-line-utilities"]

[lib]
name = "keychest_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["devtools"] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-global-shortcut = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
argon2 = { version = "0.5", features = ["password-hash", "zeroize"] }
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-local-authentication = { version = "0.3", features = ["block2"] }
block2 = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
